--- a/historia.html
+++ b/historia.html
@@ -7,16 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/69a5648348.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
-    <title>Zabrze - pogoda na dzisiaj</title>
+    <title>Podoga Zabrze - historia</title>
 </head>
 
 <body>
-    <h1>Pogoda dla mojego miasta</h1>
-    <a href="./historia.html">Pokaż dane historyczne dla miasta Zabrza</a>
-    <div class="container"></div>
-    <div class="time-box"></div>
+   <h1>Pogoda Zabrze - dane historyczne</h1>
+<a href="./index.html">Powrót do strony głównej</a>
+   <div class="container-history"></div>
 
-    <script src="./app.js" type="module"></script>
+    <script src="./history.js" type="module"></script>
 </body>
 
 </html>
