--- a/historia.html
+++ b/historia.html
@@ -7,12 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/69a5648348.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style.css">
-    <title>Podoga Zabrze - historia</title>
+    <title>Pogoda Zabrze - historia</title>
 </head>
 
-<body>
-   <h1>Pogoda Zabrze - dane historyczne</h1>
-<a href="./index.html">Powrót do strony głównej</a>
+<body id="body-history">
+    
+        <h1 class="h1-history">Pogoda Zabrze - dane historyczne</h1>
+        <a href="./index.html">Powrót do strony głównej</a>
+   
+
+
    <div class="container-history"></div>
 
     <script src="./history.js" type="module"></script>
