added style for history.html

--- a/historia.html
+++ b/historia.html
@@ -11,13 +11,13 @@
 </head>
 
 <body id="body-history">
-    
-        <h1 class="h1-history">Pogoda Zabrze - dane historyczne</h1>
-        <a href="./index.html">Powrót do strony głównej</a>
-   
+
+    <h1 class="h1-history">Pogoda Zabrze - prognoza 10 dniowa</h1>
+    <a href="./index.html">Powrót do strony głównej</a>
 
 
-   <div class="container-history"></div>
+
+    <div class="container-history"></div>
 
     <script src="./history.js" type="module"></script>
 </body>
