--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <h1>Pogoda dla mojego miasta</h1>
-    <a href="./historia.html">Pokaż dane historyczne dla miasta Zabrza</a>
+    <a href="./historia.html">Pokaż prognozę 10-cio dniową dla miasta Zabrza</a>
     <div class="container"></div>
     <div class="time-box"></div>
 
